--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.2.18",
-    "react": "^18",
-    "react-dom": "^18",
-    "@supabase/supabase-js": "^2.39.7",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "lucide-react": "^0.344.0"
+    "@supabase/supabase-js": "^2.39.7",
+    "lucide-react": "^0.344.0",
+    "next": "14.2.18",
+    "react": "^18.3.1",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.18",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.18"
+    "typescript": "^5"
   }
 }
